--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <div class="first-block">
-      <img  class="daniel" src="images/image-daniel.jpg" alt="daniel photo" />
+      <img  class="daniel" src="images/image-daniel.jpg" alt="daniel photos" />
       <img class="quote" src="images/bg-pattern-quotation.svg" alt="quotation" />
       <div class="head">
       <div class="name">Daniel Clifford</div>
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="second-block">
-      <img src="images/image-jonathan.jpg" alt="jonathan photo" />
+      <img src="images/image-jonathan.jpg" alt="jonathan photos" />
       <div class="head">
       <div class="name">Jonathan Walters</div>
       <p>Verified Graduate</p>
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div class="third-block">
-      <img src="images/image-kira.jpg" alt="kira photo" />
+      <img src="images/image-kira.jpg" alt="kira photos" />
       <div class="head">
       <div class="name black">Kira Whittle</div>
       <p class="verifed">Verified Graduate</p>
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="fourth-block">
-      <img src="images/image-jeanette.jpg" alt="jeanette photo" />
+      <img src="images/image-jeanette.jpg" alt="jeanette photos" />
       <div class="head">
       <div class="name black">Jeanette Harmon</div>
       <p class="verifed">Verified Graduate</p>
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class="fifth-block">
-      <img class="patrick" src="images/image-patrick.jpg" alt="patrick photo" />
+      <img class="patrick" src="images/image-patrick.jpg" alt="patrick photos" />
       <div class="head">
       <div class="name">Patrick Abrams</div>
       <p>Verified Graduate</p>
